add ios device info endpoint
